<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MXUIMusixMainScreen!</string>
    <string name="app_name">Musix</string>
<string name="mymusiccaption">My Music</string>
<string name="mymusicgenrecaption">Genres</string>
<string name="mymusicsometext">Some Text</string>
<string name="mymusicedit">Edit</string>
<string name="mymusicabout">ToS</string>
<string name="mymusicback">Back</string>
<string name="mymusic_title_allmusic">All Music</string>
<string name="mymusic_title_songs">Songs</string>
<string name="mymusic_title_playlists">Playlists</string>
<string name="mymusic_title_artists">Artists</string>
<string name="mymusic_title_albums">Albums</string>
<string name="mymusic_title_genres">Genres</string>
<string name="mymusic_subtitle_allmusic">Total songs: </string>
<string name="mymusic_subtitle_songs">Total songs: </string>
<string name="mymusic_subtitle_playlists">Total playlists:</string>
<string name="mymusic_subtitle_artists">Total artists: </string>
<string name="mymusic_subtitle_albums">Total albums: </string>
<string name="mymusic_subtitle_genres">Total genres: </string>
<string name="terms_of_service">this text will be displayed as terms of service.</string>
<string name="mymusicaboutclose">Close</string>
<string name="mymusic_addto_playlist2go">Add to Playlist2Go</string>
<string name="mymusic_delete_all_songs">Delete All</string>
<string name="mymusic_playlist2go">playlist2go</string>
<string name="mymusic_btn_done">Done</string>
<string name="mymusic_alert_title_deletesong">Delete song</string>
<string name="mymusic_alert_message_deletesong">Are you sure you want to delete this song?</string>
<string name="mymusic_yes">Yes</string>
<string name="mymusic_no">No</string>
<string name="mymusic_ok">OK</string>
<string name="mymusic_alert_title_songsadded">Songs Added</string>
<string name="mymusic_alert_message_songsadded">Number of added songs: </string>
<string name="catalog_caption">Download Music</string>
<string name="catalog_btn_search">Search</string>
<string name="catalog_btn_genres">Genres</string>
<string name="catalog_btn_featured">Featured</string>
<string name="catalog_txt_playlist">Playlists</string>
<string name="catalog_txt_album">Albums</string>
<string name="catalog_txt_song">Songs</string>
<string name="mymusic_title_mymusic">My Music</string>
<string name="test_mp3_url">http://192.168.0.8/song.mp3</string>
<string name="test_mp3_url_1">http://freeplaymusic.com/search/download_file.php?id=391&amp;dur=0&amp;type=mp3</string>
<string name="music_catalog_collection">Collection</string>
<string name="catalog_btn_artists">Artists</string>
<string name="catalog_featured_songs">Featured Songs</string>
<string name="catalog_featured_albums">Featured Albums</string>
<string name="catalog_featured_playlists">Featured Playlists</string>
<string name="catalog_title_downloadstring">Download Music</string>
<string name="catalog_title_genres">Genres</string>
<string name="catalog_title_search">Search</string>
<string name="catalog_title_featured_genre_name">Alternatives</string>
<string name="catalog_title_featured_playlist">Featured Playlists</string>
<string name="catalog_title_featured_album">Featured Albums</string>
<string name="catalog_title_featured_song">Featured Songs</string>
<string name="catalog_btn_download_album">Download Album</string>
<string name="catalog_btn_download_playlist">Download Playlist</string>
<string name="catalog_btn_download_selected">Download Songs</string>
<string name="catalog_btn_download_deselect">Deselect</string>
<string name="catalog_btn_download_songs">Download All Songs</string>
<string name="tab_nowplaying">Now Playing</string>
<string name="tab_mymusic">My Music</string>
<string name="tab_musiccatalog">Music Catalog</string>
<string name="catalog_button_next20">Get Next 20</string>
<string name="catalog_found">found </string>
<string name="catalog_items"> items</string>
</resources>
